--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@pinecone-database/pinecone": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.35.3",
+    "@types/md5": "^2.3.3",
+    "@xenova/transformers": "^2.6.2",
     "aws-sdk": "^2.1467.0",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
@@ -22,9 +24,12 @@
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.19.13",
     "drizzle-orm": "^0.28.6",
+    "itertools": "^2.1.2",
     "langchain": "^0.0.157",
     "lucide-react": "^0.279.0",
+    "md5": "^2.3.0",
     "next": "latest",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "react": "latest",
